@@ -3,6 +3,7 @@
    dbdimp.c
 
    Copyright (c) 1994-2006  Tim Bunce  Ireland
+   Copyright (c) 2006-2008  John Scoles (The Pythian Group), Canada
 
    See the COPYRIGHT section in the Oracle.pm file for terms.
 
@@ -318,7 +319,7 @@ fb_ary_free(fb_ary_t *fb_ary)
     Safefree(fb_ary->arcode);
     Safefree(fb_ary->cb_abuf);
     Safefree(fb_ary);
-   
+
 }
 
 
@@ -2185,7 +2186,7 @@ dbd_rebind_ph_char(imp_sth_t *imp_sth, phs_t *phs)
   	  	if (imp_sth->ora_pad_empty)
 	  	  croak("Can't use ora_pad_empty with bind_param_inout");
 	  	if (SvTYPE(phs->sv)!=SVt_RV || !at_exec) {
-	  	
+
 			if (phs->ftype == 96){
 				SvGROW(phs->sv,(STRLEN) (unsigned int)phs->maxlen-1);
 		  	} else {
@@ -2197,10 +2198,10 @@ dbd_rebind_ph_char(imp_sth_t *imp_sth, phs_t *phs)
 		      /* phs->sv _is_ the real live variable, it may 'mutate' later	*/
 			  /* pre-upgrade to high'ish type to reduce risk of SvPVX realloc/move */
 				SvGROW(phs->sv, (STRLEN)(((unsigned int) phs->maxlen <= min_len) ? min_len : (unsigned int) phs->maxlen)+1/*for null*/);
-		
+
 			}
 		}
-	  
+
     }
 
     /* At this point phs->sv must be at least a PV with a valid buffer,	*/
@@ -2224,7 +2225,7 @@ dbd_rebind_ph_char(imp_sth_t *imp_sth, phs_t *phs)
 
     phs->sv_type = SvTYPE(phs->sv);	/* part of mutation check	*/
     phs->maxlen  = ((IV)SvLEN(phs->sv)); /* avail buffer space (64bit safe) Logicaly maxlen should never change but it does why I know not*/
-	
+
     if (phs->maxlen < 0)		/* can happen with nulls	*/
 	  phs->maxlen = 0;
 
@@ -3234,7 +3235,7 @@ ora_st_execute_array(sth, imp_sth, tuples, tuples_status, columns, exe_count)
         	}
         	if(len > (unsigned int) phs[i]->maxlen)
         	    phs[i]->maxlen = len;
-     
+
         	/* Do OCI bind calls on last iteration. */
         	if( ((unsigned int) j ) == exe_count - 1 ) {
         	    if(!do_bind_array_exec(sth, imp_sth, phs[i])) {
